--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <link href="css\reset.ss" rel="stylesheet" />
+    <link href="css\StyleSheet.css" rel="stylesheet" />
+    <script src="js/Script.js"></script>
+
+    <title>Desafio 6</title>
 </head>
 <body>
+    <div>
+       
+    </div>
 
 </body>
 </html>
