--- a/Index.html
+++ b/Index.html
@@ -3,15 +3,33 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link href="css\reset.ss" rel="stylesheet" />
+    <link href="css\reset.css" rel="stylesheet" />
     <link href="css\StyleSheet.css" rel="stylesheet" />
     <script src="js/Script.js"></script>
 
     <title>Desafio 6</title>
 </head>
 <body>
-    <div>
-       sdasdasd
+    <div class="divTop">
+
+        <form class="form1">
+            <label for="_userName"> NOME: </label>
+            <input type="text" id="_userName" maxlength="30" />
+            <label for="_userSobrenome"> SOBRENOME: </label>
+            <input type="text" id="_userSobrenome" maxlength="30" />
+            <label for="_userIdade"> IDADE:  </label>
+            <input type="number" id="_userIdade" />
+            <label for="sexo">H</label>
+            <input type="checkbox" id="sexo" />
+            <label for="sexom">M</label>
+            <input type="checkbox" id="sexom" />
+            <label for="_titulo">TITÚLO: </label>
+            <input type="text" id="_titulo" />
+            <label> MENSAGEM: </label>
+            <input type="text" id="_mesage" maxlength="200" />
+        </form>
+
+
     </div>
 
 </body>
