--- a/Index.html
+++ b/Index.html
@@ -10,25 +10,28 @@
     <title>Desafio 6</title>
 </head>
 <body>
-    <div class="divTop">
 
-        <form class="form1">
-            <label for="_userName"> NOME: </label>
-            <input type="text" id="_userName" maxlength="30" />
-            <label for="_userSobrenome"> SOBRENOME: </label>
-            <input type="text" id="_userSobrenome" maxlength="30" />
-            <label for="_userIdade"> IDADE:  </label>
-            <input type="number" id="_userIdade" />
-            <label for="sexo">H</label>
-            <input type="checkbox" id="sexo" />
-            <label for="sexom">M</label>
-            <input type="checkbox" id="sexom" />
-            <label for="_titulo">TITÚLO: </label>
-            <input type="text" id="_titulo" />
-            <label> MENSAGEM: </label>
-            <input type="text" id="_mesage" maxlength="200" />
+    <div class="divForm">
+        <header>Preencha o Formulario</header>
+        <form>
+            <label for="nome">Nome:</label>
+            <input type="text" name="nome" value="" id="nome" maxlength="30" />
+            <label for="sobrenome">Sobrenome:</label>
+            <input type="text" name="sobrenome" value="" id="sobrenome" maxlength="30" />
+            <div class="sexo">
+                <label for="M">M</label>
+                <input type="radio" name="M" value="m" id="M" />
+                <label for="M">F</label>
+                <input type="radio" name="M" value="m" id="M" />
+            </div>
+            <label for="idade">Idade:</label>
+            <input type="number" name="idade" value="" />
+
+            <label for="titulo">Titulo:</label>
+            <input type="text" name="titulo" value="" id="titulo" maxlength="50" />
+            <label for="menssagem">Menssagem:</label>
+            <textarea id="menssagem" style="resize:none" rows="5" cols="21" maxlength="200"></textarea>
         </form>
-
 
     </div>
 
