--- a/Index.html
+++ b/Index.html
@@ -18,30 +18,32 @@
             <input type="text" name="nome" value="" id="nome" maxlength="30" onkeyup="somentLetras(this)"
                    placeholder="Nome">
             <input type="text" name="sobrenome" value="" id="sobrenome" maxlength="30" onkeyup="somentLetras(this)"
-                   placeholder="Sobrenome"/>
+                   placeholder="Sobrenome" />
             <div class="sexo">
                 <label for="M">M</label>
                 <input type="radio" name="M" value="m" id="M" />
                 <label for="M">F</label>
                 <input type="radio" name="M" value="m" id="M" />
             </div>
-            <input type="number" name="idade" value=""placeholder="Idade" />
-            <input type="text" name="titulo" value="" id="titulo" maxlength="50" placeholder="Titulo"/>
+            <input type="number" name="idade" value="" placeholder="Idade" />
+            <input type="text" name="titulo" value="" id="titulo" maxlength="50" placeholder="Titulo" />
             <textarea id="menssagem" style="resize:none" rows="5" cols="21" maxlength="200"
                       placeholder="Messangem"></textarea>
         </form>
     </div>
-  
+
     <div class="divBot">
         <div class="select">
-            <img src="img\1.jpg" width="50" height="50" />
-            <img src="img\2.jpg" width="50" height="50" />
-            <img src="img\3.jpg" width="50" height="50" />
-            <img src="img\4.jpg" width="50" height="50" />
+            <input type="image" name="1" src="img\1.jpg" width="50" height="50" onclick="pegaImg1" />
+            <input type="image" name="2" src="img\2.jpg" width="50" height="50" />
+            <input type="image" name="3" src="img\3.jpg" width="50" height="50" />
+            <input type="image" name="4" src="img\4.jpg" width="50" height="50" />
         </div>
-
-
     </div>
     
+    <div class="demo">
+
+    </div>
+
 </body>
 </html>
