-att input frame and button

--- a/Index.html
+++ b/Index.html
@@ -34,16 +34,20 @@
 
     <div class="divBot">
         <div class="select">
-            <input type="image" name="1" src="img\1.jpg" width="50" height="50" onclick="pegaImg1" />
-            <input type="image" name="2" src="img\2.jpg" width="50" height="50" />
-            <input type="image" name="3" src="img\3.jpg" width="50" height="50" />
-            <input type="image" name="4" src="img\4.jpg" width="50" height="50" />
+            <input type="image" name="1" src="img\1.jpg" width="75" height="75" onclick="pegaImg1" />
+            <input type="image" name="2" src="img\2.jpg" width="75" height="75" />
+            <input type="image" name="3" src="img\3.jpg" width="75" height="75" />
+            <input type="image" name="4" src="img\4.jpg" width="75" height="75" />
+        </div>
+        <div class="btn1">
+            <button class="button">Preview</button>
+        </div>
+        <div class="frame">
+            <iframe src="Index.html" width=" 300" height="500"></iframe>
         </div>
     </div>
-    
-    <div class="demo">
 
-    </div>
+
 
 </body>
 </html>
