--- a/Index.html
+++ b/Index.html
@@ -34,21 +34,21 @@
 
     <div class="divBot">
         <div class="select">
-            <img src="img\1.jpg" alt="Avatar" class="image1" width="75" height="75" onclick="img1('ma')"/>
-            <img src="img\2.jpg" alt="Avatar" class="image2" width="75" height="75"onclick="img2('ma')"/>
-            <img src="img\3.jpg" alt="Avatar" class="image3" width="75" height="75"onclick="img3('ma')"/>
-            <img src="img\4.jpg" alt="Avatar" class="image4" width="75" height="75"onclick="img4('ma')"/>
+            <img src="img\1.jpg" alt="Avatar" class="image1" width="75" height="75" onclick="img1('ma')" />
+            <img src="img\2.jpg" alt="Avatar" class="image2" width="75" height="75" onclick="img2('ma')" />
+            <img src="img\3.jpg" alt="Avatar" class="image3" width="75" height="75" onclick="img3('ma')" />
+            <img src="img\4.jpg" alt="Avatar" class="image4" width="75" height="75" onclick="img4('ma')" />
         </div>
         <div class="btn1">
-            <input type="button" class="button" value="Preview" onclick="preview('ma')"/>
+            <input type="button" class="button" value="Preview" onclick="preview('ma')" />
         </div>
         <div class="frame" id="ma">
             <text id=txtrect x="5" y="35" font-family="Verdana" font-size="11" fill="white"></text>
             <div class="oct">
-                <p id="att" ></p>
+                <p id="att">Att:</p>
                 <p id="rod">Rodolfo viscal Soares </p>
             </div>
-            
+
         </div>
     </div>
 
